--- a/src/components/ServerTree.css
+++ b/src/components/ServerTree.css
@@ -8,7 +8,24 @@ ul {
     padding-left: 0;
 }
 
-.channel-tree-item {
-    padding-top: 5px;
-    padding-left: 20px;
+.channel-tree-item:hover {
+    background-color: grey;
+}
+
+.channel-button {
+    background-color: transparent;
+    color: white;
+    border: 0;
+    height: 100%;
+    width: 100%;
+    padding: 0;
+}
+
+.channel-button-selected {
+    background-color: blue;
+    color: white;
+    border: 0;
+    height: 100%;
+    width: 100%;
+    padding: 0;
 }
