--- a/src/App.css
+++ b/src/App.css
@@ -6,13 +6,15 @@
   display: flex;
   flex-direction: column;
   align-items: stretch;
-  min-height: 100vh;
+  min-height: 98vh;
+  margin: 3px;
 }
 .App-container {
   display: flex;
   flex-direction: row;
   color: #ffffff;
   flex: 2 1 auto;
+  margin-top: 10px;
 }
 
 .App-text {
