--- a/src/components/EntryBox.css
+++ b/src/components/EntryBox.css
@@ -1,7 +1,8 @@
 .entrybox-container {
-    width: 100%;
     display: flex;
     flex-direction: row;
+    margin-right: 10px;
+    margin-top: 5px;
 }
 
 .entrybox {
