--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
   margin: 0;
 }
+ *:focus {
+   outline-color: white;
+   outline-style: solid;
+   outline-width: thin;
+ }
