--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,13 @@
 body {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-  background-color: #000000;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  margin: 0;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+    background-color: #000000;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    margin: 0;
 }
- *:focus {
-   outline-color: white;
-   outline-style: solid;
-   outline-width: thin;
- }
+
+*:focus {
+    outline-color: white;
+    outline-style: solid;
+    outline-width: thin;
+}
