Add keytar package and single -> double quotes

--- a/src/components/ServerTree.css
+++ b/src/components/ServerTree.css
@@ -14,7 +14,7 @@ ul {
 }
 
 .channel-button {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
         monospace;
     color: white;
     border: 0;
