--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -11,8 +11,10 @@
     padding-top: 5px;
 }
 
-.toggle-server:hover {
-    background-color: grey;
+@media(hover: hover) and (pointer: fine) {
+    .toggle-server:hover {
+        background-color: grey;
+    }
 }
 
 .channel-name {
