--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,9 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     margin: 0;
+    position: fixed;
+    width: 100%;
+    height: 100%;
 }
 
 *:focus {
