--- a/src/App.css
+++ b/src/App.css
@@ -2,16 +2,18 @@
   text-align: left;
 }
 
+#root {
+  height: 99vh;
+}
 .App {
     display: flex;
     flex-direction: column;
-    align-items: stretch;
-    min-height: 98vh;
     margin: 3px;
+    height: 100%;
 }
 .App-container {
+    flex: auto;
     display: flex;
-    flex-direction: row;
     color: #ffffff;
-    flex: 2 1 auto;
+    min-height: 0;
 }
