--- a/src/components/MessageList.css
+++ b/src/components/MessageList.css
@@ -1,17 +1,5 @@
 .message-list {
-    flex: 2 1 auto;
+    flex: auto;
     list-style-type: none;
     overflow-y: auto;
-    height: 88vh;
-    scrollbar-color: white transparent;
-    scrollbar-width: thin;
-}
-
-.message-list::-webkit-scrollbar {
-    width: 5px;
-}
-
-.message-list::-webkit-scrollbar-thumb {
-    background-color: white;
-    border-radius: 10px;
 }
