--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,8 @@ body {
     -moz-osx-font-smoothing: grayscale;
     margin: 0;
     position: fixed;
+    height: 100vh;
     width: 100%;
-    height: 100%;
 }
 
 *:focus {
