add some hacks for mobile safari

--- a/src/components/util.css
+++ b/src/components/util.css
@@ -13,7 +13,7 @@
     background-color: transparent;
     border: 1px solid white;
     color: white;
-    height: 25px;
+    padding: 5px;
 }
 
 @media(hover: hover) and (pointer: fine) {
