Give user the opportunity to fix connection details

--- a/src/components/util.css
+++ b/src/components/util.css
@@ -5,6 +5,11 @@
     font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
         monospace;
     border: 1px solid white;
+    width: 100%;
+}
+
+.text {
+    font-size: 14px;
 }
 
 .button {
