--- a/src/components/ServerTree.css
+++ b/src/components/ServerTree.css
@@ -65,3 +65,11 @@ ul {
 .context-menu-item {
     padding: 5px;
 }
+
+.disconnected-server {
+    color: red;
+}
+
+.image-button {
+    border: 0 !important;
+}
