--- a/src/components/UserList.css
+++ b/src/components/UserList.css
@@ -2,4 +2,19 @@
     border-left: thin solid #ffffff;
     padding-left: 5px;
     padding-top: 10px;
+    max-width: 100px;
+    min-width: 100px;
+    overflow-x: auto;
+}
+
+.online-user {
+    color: lightgreen !important;
+}
+
+.away-user {
+    color: orange;
+}
+
+.offline-user {
+    color: darkgray;
 }
