in progress changes

--- a/src/App.css
+++ b/src/App.css
@@ -19,3 +19,12 @@
     color: #ffffff;
     min-height: 0;
 }
+
+.chat-box {
+    flex: auto;
+    margin-left: 10px;
+    margin-right: 0px;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+}
