--- a/src/components/ServerTree.css
+++ b/src/components/ServerTree.css
@@ -4,6 +4,7 @@
     padding-top: 10px;
     overflow-y: auto;
     min-width: 100px;
+    font-size: 18px;
 }
 
 ul {
@@ -24,6 +25,7 @@ ul {
     padding-bottom: 8px;
     padding-top: 8px;
     text-align: left;
+    font-size: 16px;
 }
 
 @media(hover: hover) and (pointer: fine) {
