--- a/src/components/util.css
+++ b/src/components/util.css
@@ -19,6 +19,7 @@ a:visited {
     border: 1px solid white;
     color: white;
     padding: 5px;
+    font-size: 16px;
 }
 
 @media(hover: hover) and (pointer: fine) {
